--- a/conf/monitorlog.conf
+++ b/conf/monitorlog.conf
@@ -15,7 +15,7 @@ datefmt=%Y-%m-%d %H:%M:%S
 class=handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=idFormatter
-args=('/Users/furuiyang/Desktop/temp/simple_mongo/logs/test.log','midnight',1,10)
+args=('logs/monitor.log','midnight',1,10)
 
 [logger_root]
 level=DEBUG
